# tsdb-benchmark

./: .gitignore  BENCHMARK_REPORT.md  LICENSE  README.md  TSDB_ANALYSIS.md  docker-compose.yml  start-benchmark.sh
benchmark/: Dockerfile  data_generator.py  pyproject.toml  requirements.txt  run_benchmarks.py  storage_test.py
grafana-provisioning/datasources/: datasources.yml
